# llm-mud

./: .gitignore  Dockerfile.web  Dockerfile.zone  README.md  docker-compose.yml  pyproject.toml
model/: core.py  effect.py  level.py  player.py  variable.py
src/model/: context.py  item.py  mobile.py  player.py
tests/: __init__.py
tests/e2e/: __init__.py  conftest.py  test_commands.py  test_health.py  test_login.py  utils.py
world/abilities/: racial.yaml
world/classes/: base.yaml
world/items/: ashveil.yaml  bleached_wastes.yaml  coral_bay.yaml  crucible.yaml  crystaldeep.yaml  drowned_sanctum.yaml  ebonwatch.yaml  ironvein.yaml  mirehollow.yaml  obsidian_depths.yaml  ravenmoor.yaml  shimmerwood.yaml  skyreach.yaml  starter.yaml  stillwater.yaml  sunken_fleet.yaml  thornhaven.yaml  undercroft.yaml  verdant_maze.yaml  willowdale.yaml  windreach.yaml  wraithhollow.yaml
world/mobs/: ashveil.yaml  bleached_wastes.yaml  coral_bay.yaml  crucible.yaml  crystaldeep.yaml  drowned_sanctum.yaml  ebonwatch.yaml  ironvein.yaml  mirehollow.yaml  obsidian_depths.yaml  ravenmoor.yaml  ravenmoor_guilds.yaml  shimmerwood.yaml  skyreach.yaml  starter.yaml  stillwater.yaml  sunken_fleet.yaml  thornhaven.yaml  undercroft.yaml  verdant_maze.yaml  willowdale.yaml  windreach.yaml  wraithhollow.yaml
world/portals/: starter.yaml
world/quests/: starter.yaml
world/races/: base.yaml
world/regions/: coastal_road.yaml  deep_ways.yaml  forest_path.yaml  fungal_highway.yaml  great_northern_road.yaml  mine_trail.yaml  mist_veil.yaml  mountain_path.yaml  singing_canyon.yaml  sky_road.yaml  tidal_flats.yaml  trackless_wilds.yaml
world/rooms/: ashveil.yaml  bleached_wastes.yaml  coral_bay.yaml  crucible.yaml  crystaldeep.yaml  drowned_sanctum.yaml  ebonwatch.yaml  ironvein.yaml  mirehollow.yaml  obsidian_depths.yaml  ravenmoor.yaml  ravenmoor_guilds.yaml  shimmerwood.yaml  skyreach.yaml  starter.yaml  stillwater.yaml  sunken_fleet.yaml  thornhaven.yaml  undercroft.yaml  verdant_maze.yaml  willowdale.yaml  (+2 more)
(+23 files in other folders)
